--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,125 @@
-/*# sourceMappingURL=style.css.map */
+@-webkit-keyframes textAppear {
+  0% {
+    -webkit-transform: translate(0, 100%);
+            transform: translate(0, 100%);
+  }
+  100% {
+    -webkit-transform: translate(0, 0%);
+            transform: translate(0, 0%);
+  }
+}
+@keyframes textAppear {
+  0% {
+    -webkit-transform: translate(0, 100%);
+            transform: translate(0, 100%);
+  }
+  100% {
+    -webkit-transform: translate(0, 0%);
+            transform: translate(0, 0%);
+  }
+}
+.header-items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.logo {
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  color: #000000;
+  text-decoration: none;
+  margin: 30px 0;
+}
+
+.logo-decor-text {
+  color: rgb(33, 150, 243);
+}
+
+.navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-left: 95px;
+  width: 933px;
+}
+.navigation:focus-within {
+  margin-bottom: 0px;
+}
+
+.nav-ul, .header-address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 50px;
+}
+
+.nav-ul_el {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 500;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: #212121;
+  text-decoration: none;
+}
+.nav-ul_el:hover, .nav-ul_el:focus {
+  color: rgb(33, 150, 243);
+}
+.nav-ul_el::after {
+  display: block;
+  content: "";
+  height: 4px;
+  background-color: inherit;
+  border: none;
+  border-radius: 3px;
+  margin-top: 29px;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-ul_el:focus::after {
+  background-color: rgb(33, 150, 243);
+}
+
+.header-addressli:hover .address_el {
+  color: rgb(33, 150, 243);
+}
+.header-addressli:hover .address-svg {
+  fill: rgb(33, 150, 243);
+}
+
+body {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}/*# sourceMappingURL=style.css.map */
