--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+.modal-form_comment:focus, .modal-form_el:focus {
+  outline: solid 1px rgb(33, 150, 243);
+  border: none;
+}
+
+body {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  -webkit-padding-start: 0;
+          padding-inline-start: 0;
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
 @-webkit-keyframes textAppear {
   0% {
     -webkit-transform: translate(0, 100%);
@@ -8,6 +31,7 @@
             transform: translate(0, 0%);
   }
 }
+
 @keyframes textAppear {
   0% {
     -webkit-transform: translate(0, 100%);
@@ -99,27 +123,379 @@
   background-color: rgb(33, 150, 243);
 }
 
-.header-addressli:hover .address_el {
+.header-addressli:hover + .address_el {
   color: rgb(33, 150, 243);
 }
-.header-addressli:hover .address-svg {
+.header-addressli:hover + .address-svg {
   fill: rgb(33, 150, 243);
 }
 
-body {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+.address_el {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 500;
+  color: #757575;
+  text-decoration: none;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  -webkit-padding-start: 0;
-          padding-inline-start: 0;
+.address-svg {
+  vertical-align: middle;
+  fill: #757575;
+  margin-right: 10px;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.container {
-  width: 1200px;
+.hero {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(130, 132, 160, 0.4))), url(/img/hero-background.png);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(130, 132, 160, 0.4)), url(/img/hero-background.png);
+  height: 600px;
+  padding-top: 200px;
+  background-size: cover;
+}
+
+.solution {
+  font-family: "Roboto";
+  font-size: 44px;
+  font-weight: 900;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+.features {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 30px;
+  margin-top: 95px;
+  height: 284px;
+}
+.features h4 {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 700;
+  color: #212121;
+  margin-bottom: 0px;
+}
+.features p {
+  color: #757575;
+  line-height: 20px;
+}
+
+.features_li {
+  width: calc((100% - 60px) / 4);
+  height: 72px;
+}
+.features_li::before {
+  display: block;
+  content: "";
+  width: 270px;
+  height: 120px;
+  margin-bottom: 30px;
+  border-radius: 3px;
+  background-size: contain;
+  background-color: #F5F4FA;
+  background-repeat: no-repeat;
+  background-size: 70px 70px;
+  background-position: center;
+}
+
+.features_li-antenna::before {
+  background-image: url("/img/antenna.svg");
+}
+
+.features_li-astronaut::before {
+  background-image: url("/img/astronaut.svg");
+}
+
+.features_li-clock::before {
+  background-image: url("/img/clock.svg");
+}
+
+.features_li-diagram::before {
+  background-image: url("/img/diagram.svg");
+}
+
+.main-h2 {
+  font-family: "Roboto";
+  font-size: 36px;
+  font-weight: 700;
+  color: #212121;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.activities {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
+.activities_li {
+  width: calc((100% - 60px) / 3);
+  position: relative;
+  height: 294px;
+}
+.activities_li-overlay {
+  position: absolute;
+  bottom: 0;
+  width: 370px;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+  padding-top: 27px;
+}
+.activities_li-overlay p {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 700;
+  color: #FFFFFF;
+  text-align: center;
+  margin: 0px;
+}
+
+.team {
+  background-color: #F5F4FA;
+  margin-top: 90px;
+  padding: 95px 0;
+}
+
+.team-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+}
+
+.team-members {
+  width: calc((100% - 60px) / 3);
+  -webkit-box-shadow: 0 2px 2px rgba(117, 117, 117, 0.3);
+          box-shadow: 0 2px 2px rgba(117, 117, 117, 0.3);
+  line-height: 0px;
+  border-radius: 5px;
+}
+.team-members h5 {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  margin: 0px;
+  padding-top: 35px;
+}
+.team-members p {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 400;
+  color: #757575;
+  text-align: center;
+  margin-bottom: 0px;
+}
+
+.team-info {
+  background-color: #FFFFFF;
+  line-height: 17px;
+}
+
+.modal-open-btn {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  border-radius: 5px;
+  display: block;
   margin: 0 auto;
-  padding: 0 15px;
+  background-color: rgb(33, 150, 243);
+  color: #FFFFFF;
+  padding: 12px 30px;
+  cursor: pointer;
+}
+
+.no-scroll {
+  overflow: visible;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  z-index: 1;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 10%;
+  left: 30%;
+  min-width: 528px;
+  min-height: 581px;
+  -webkit-transform: translate(-50% -50%);
+          transform: translate(-50% -50%);
+  padding-top: 9px;
+  background-color: #FFFFFF;
+}
+
+.modal-close-btn {
+  width: 30px;
+  height: 30px;
+  margin-left: 490px;
+  padding: 4px 4px;
+  border: solid 2px rgba(0, 0, 0, 0.1);
+  border-radius: 22px;
+  background-color: #FFFFFF;
+}
+
+.close-btn-svg {
+  width: 18px;
+  height: 18px;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-btn-svg:hover {
+  fill: rgb(33, 150, 243);
+  cursor: pointer;
+}
+
+.form-container {
+  width: 448px;
+  margin: 0px auto;
+}
+.form-container h1 {
+  font-family: "Roboto";
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.modal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+.enter {
+  font-family: "Roboto";
+  font-size: 12px;
+  font-weight: 400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  position: relative;
+}
+
+.modal-form_el {
+  height: 40px;
+  padding: 10px 37px;
+  border: solid 1px rgba(33, 33, 33, 0.2);
+  border-radius: 5px;
+  -webkit-transition-property: outline border cursor;
+  transition-property: outline border cursor;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form_el:focus + .modal-input-svg {
+  fill: rgb(33, 150, 243);
+}
+.modal-form_el:hover {
+  cursor: pointer;
+}
+
+.modal-input-svg {
+  position: absolute;
+  left: 15px;
+  bottom: 10px;
+  width: 18px;
+  height: 18px;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form_comment {
+  height: 120px;
+  padding: 10px 15px;
+  resize: none;
+  border: solid 1px rgba(33, 33, 33, 0.2);
+  border-radius: 5px;
+  -webkit-transition-property: border;
+  transition-property: border;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  color: #757575;
+  margin: 20px auto;
+}
+.checkbox input {
+  width: 16px;
+  height: 15px;
+  border: solid 5px #000000;
+  vertical-align: middle;
+  margin-right: 6px;
+}
+.checkbox a {
+  color: rgb(33, 150, 243);
+}
+
+.send-form {
+  border: none;
+  border-radius: 5px;
+  width: 200px;
+  height: 50px;
+  background-color: rgb(33, 150, 243);
+  -webkit-box-shadow: 0px 2px 5px #757575;
+          box-shadow: 0px 2px 5px #757575;
+  margin: 32px auto;
+  cursor: pointer;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+  color: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
