--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,14 @@
   border: none;
 }
 
+.footer-submit {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+  color: #FFFFFF;
+  background-color: rgb(33, 150, 243);
+}
+
 body {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -123,10 +131,10 @@ ul {
   background-color: rgb(33, 150, 243);
 }
 
-.header-addressli:hover + .address_el {
+.header-address li:hover .address_el {
   color: rgb(33, 150, 243);
 }
-.header-addressli:hover + .address-svg {
+.header-address li:hover .address-svg {
   fill: rgb(33, 150, 243);
 }
 
@@ -154,6 +162,204 @@ ul {
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.outline {
+  border: solid 1px;
+  border-radius: 5px;
+  border-color: rgb(236, 236, 236);
+}
+
+.modal-open-btn {
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+  border: none;
+  border-radius: 5px;
+  border-color: rgba(33, 33, 33, 0.2);
+  display: block;
+  margin: 0 auto;
+  background-color: rgb(33, 150, 243);
+  color: #FFFFFF;
+  padding: 12px 30px;
+  cursor: pointer;
+}
+
+.no-scroll {
+  overflow: visible;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  opacity: 1;
+  z-index: 1;
+}
+
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+  top: 10%;
+  left: 30%;
+  min-width: 528px;
+  min-height: 581px;
+  -webkit-transform: translate(-50% -50%);
+          transform: translate(-50% -50%);
+  padding-top: 9px;
+  background-color: #FFFFFF;
+}
+
+.modal-close-btn {
+  width: 30px;
+  height: 30px;
+  margin-left: 490px;
+  padding: 4px 4px;
+  border: solid 2px rgba(0, 0, 0, 0.1);
+  border-radius: 22px;
+  background-color: #FFFFFF;
+}
+
+.close-btn-svg {
+  width: 18px;
+  height: 18px;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.close-btn-svg:hover {
+  fill: rgb(33, 150, 243);
+  cursor: pointer;
+}
+
+.form-container {
+  width: 448px;
+  margin: 0px auto;
+}
+.form-container h1 {
+  font-family: "Roboto";
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+}
+
+.modal-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 10px;
+}
+
+.enter {
+  font-family: "Roboto";
+  font-size: 12px;
+  font-weight: 400;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 5px;
+  position: relative;
+}
+
+.modal-form_el {
+  height: 40px;
+  padding: 10px 37px;
+  border: solid 1px;
+  border-radius: 5px;
+  border-color: rgba(33, 33, 33, 0.2);
+  -webkit-transition-property: outline border cursor;
+  transition-property: outline border cursor;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form_el:focus + .modal-input-svg {
+  fill: rgb(33, 150, 243);
+}
+.modal-form_el:hover {
+  cursor: pointer;
+}
+
+.modal-input-svg {
+  position: absolute;
+  left: 15px;
+  bottom: 10px;
+  width: 18px;
+  height: 18px;
+  -webkit-transition-property: fill;
+  transition-property: fill;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form_comment {
+  height: 120px;
+  padding: 10px 15px;
+  resize: none;
+  border: solid 1px;
+  border-radius: 5px;
+  border-color: rgba(33, 33, 33, 0.2);
+  -webkit-transition-property: border;
+  transition-property: border;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
+  color: #757575;
+  margin: 20px auto;
+}
+.checkbox input {
+  width: 16px;
+  height: 15px;
+  border: solid 5px #000000;
+  vertical-align: middle;
+  margin-right: 6px;
+}
+.checkbox a {
+  color: rgb(33, 150, 243);
+}
+
+.send-form {
+  border: none;
+  border-radius: 5px;
+  border-color: rgba(33, 33, 33, 0.2);
+  width: 200px;
+  height: 50px;
+  background-color: rgb(33, 150, 243);
+  -webkit-box-shadow: 0px 2px 5px #757575;
+          box-shadow: 0px 2px 5px #757575;
+  margin: 32px auto;
+  cursor: pointer;
+  font-family: "Roboto";
+  font-size: 16px;
+  font-weight: 700;
+  color: #FFFFFF;
 }
 
 .hero {
@@ -312,65 +518,38 @@ ul {
   line-height: 17px;
 }
 
-.modal-open-btn {
-  font-family: "Roboto";
-  font-size: 16px;
-  font-weight: 700;
-  border: none;
-  border-radius: 5px;
-  display: block;
-  margin: 0 auto;
+.social-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 10px;
+  padding: 15px 32px 30px;
+  background-color: #FFFFFF;
+}
+.social-links li {
+  height: 44px;
+  width: 44px;
+  border-radius: 30px;
+  -webkit-transition-property: background-color;
+  transition-property: background-color;
+  -webkit-transition-duration: 250ms;
+          transition-duration: 250ms;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+          transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-links li:hover {
   background-color: rgb(33, 150, 243);
-  color: #FFFFFF;
-  padding: 12px 30px;
-  cursor: pointer;
+}
+.social-links li:hover .social-links_el {
+  fill: #FFFFFF;
 }
 
-.no-scroll {
-  overflow: visible;
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 1;
-  z-index: 1;
-}
-
-.is-hidden {
-  opacity: 0;
-  pointer-events: none;
-}
-
-.modal {
-  position: absolute;
-  top: 10%;
-  left: 30%;
-  min-width: 528px;
-  min-height: 581px;
-  -webkit-transform: translate(-50% -50%);
-          transform: translate(-50% -50%);
-  padding-top: 9px;
-  background-color: #FFFFFF;
-}
-
-.modal-close-btn {
-  width: 30px;
-  height: 30px;
-  margin-left: 490px;
-  padding: 4px 4px;
-  border: solid 2px rgba(0, 0, 0, 0.1);
-  border-radius: 22px;
-  background-color: #FFFFFF;
-}
-
-.close-btn-svg {
-  width: 18px;
-  height: 18px;
+.social-links_el {
+  display: block;
+  width: 20px;
+  height: 20px;
+  fill: #AFB1B8;
+  margin: 12px auto;
   -webkit-transition-property: fill;
   transition-property: fill;
   -webkit-transition-duration: 250ms;
@@ -378,73 +557,54 @@ ul {
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.close-btn-svg:hover {
-  fill: rgb(33, 150, 243);
-  cursor: pointer;
-}
 
-.form-container {
-  width: 448px;
-  margin: 0px auto;
+.customers {
+  padding: 95px 0px;
 }
-.form-container h1 {
+.customers p {
   font-family: "Roboto";
-  font-size: 20px;
+  font-size: 36px;
   font-weight: 700;
+  color: #212121;
+  margin: 0px;
   text-align: center;
 }
 
-.modal-form {
+.customers_ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 10px;
+  gap: 30px;
+  margin-top: 60px;
 }
 
-.enter {
-  font-family: "Roboto";
-  font-size: 12px;
-  font-weight: 400;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  gap: 5px;
-  position: relative;
-}
-
-.modal-form_el {
-  height: 40px;
-  padding: 10px 37px;
-  border: solid 1px rgba(33, 33, 33, 0.2);
+.customers_li {
+  width: 170px;
+  height: 92px;
+  border: solid 1px;
   border-radius: 5px;
-  -webkit-transition-property: outline border cursor;
-  transition-property: outline border cursor;
+  border-color: #AFB1B8;
+  -webkit-transition-property: border-color cursor;
+  transition-property: border-color cursor;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form_el:focus + .modal-input-svg {
-  fill: rgb(33, 150, 243);
-}
-.modal-form_el:hover {
+.customers_li:hover {
+  border: solid 1px;
+  border-radius: 5px;
+  border-color: rgb(33, 150, 243);
   cursor: pointer;
 }
+.customers_li:hover .customers-icons {
+  fill: rgb(33, 150, 243);
+}
 
-.modal-input-svg {
-  position: absolute;
-  left: 15px;
-  bottom: 10px;
-  width: 18px;
-  height: 18px;
+.customers-icons {
+  display: block;
+  margin: 20px auto;
+  fill: #AFB1B8;
   -webkit-transition-property: fill;
   transition-property: fill;
   -webkit-transition-duration: 250ms;
@@ -453,49 +613,195 @@ ul {
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-form_comment {
-  height: 120px;
-  padding: 10px 15px;
-  resize: none;
-  border: solid 1px rgba(33, 33, 33, 0.2);
-  border-radius: 5px;
-  -webkit-transition-property: border;
-  transition-property: border;
+.topic {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 8px;
+  margin-top: 105px;
+  margin-bottom: 50px;
+}
+
+.topic-el {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 500;
+  color: #212121;
+  background-color: #F5F4FA;
+  border-color: #F5F4FA;
+  padding: 9px 22px;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  -webkit-transition-property: color background-color box-shadow;
+  transition-property: color background-color box-shadow;
   -webkit-transition-duration: 250ms;
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.checkbox {
+.topic-el:hover {
+  color: #FFFFFF;
+  background-color: rgb(33, 150, 243);
+  -webkit-box-shadow: 0px 2px 4px #757575;
+          box-shadow: 0px 2px 4px #757575;
+}
+
+.projects {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
+  margin-bottom: 85px;
+}
+
+.project-el {
+  position: relative;
+  width: calc((100% - 60px) / 3);
+  height: 404px;
+  margin-bottom: 30px;
+  line-height: 0px;
+  overflow: hidden;
+}
+.project-el:hover {
+  -webkit-box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+.project-el:hover .hover-text {
+  display: block;
+  -webkit-animation-name: "textAppear";
+          animation-name: "textAppear";
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-direction: alternate;
+          animation-direction: alternate;
+}
+
+.hover-text {
+  display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 294px;
+  background-color: rgba(33, 150, 243, 0.9);
+  line-height: 25px;
+  padding: 63px 24px;
+}
+.hover-text p {
   font-family: "Roboto";
-  font-size: 14px;
+  font-size: 18px;
+  font-weight: 400;
+  color: #FFFFFF;
+}
+
+.project-text {
+  background-color: #FFFFFF;
+  border: solid 1px #EEEEEE;
+  height: 110px;
+  line-height: 15px;
+  position: relative;
+  z-index: 1;
+}
+.project-text h5 {
+  font-family: "Roboto";
+  font-size: 18px;
+  font-weight: 700;
+  padding-left: 24px;
+  margin-top: 30px;
+  margin-bottom: 25px;
+}
+.project-text p {
+  font-family: "Roboto";
+  font-size: 16px;
   font-weight: 400;
   color: #757575;
-  margin: 20px auto;
+  padding-left: 24px;
 }
-.checkbox input {
-  width: 16px;
-  height: 15px;
-  border: solid 5px #000000;
-  vertical-align: middle;
-  margin-right: 6px;
+
+footer {
+  background-color: #2F303A;
+  color: #FFFFFF;
+  padding: 60px 0;
 }
-.checkbox a {
+footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 85px;
+}
+footer .address_el, footer .logo {
+  color: #FFFFFF;
+}
+footer .address_el:hover {
   color: rgb(33, 150, 243);
 }
 
-.send-form {
-  border: none;
+.address {
+  margin-top: 24px;
+  line-height: 30px;
+}
+
+.footer-linksp {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin: 12px 0px 20px;
+}
+.footer-links .social-links {
+  background-color: #2F303A;
+  padding: 0px;
+}
+.footer-links .social-links li {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.footer-links .social-links li:hover {
+  background-color: rgb(33, 150, 243);
+}
+.footer-links .social-links_el {
+  fill: #FFFFFF;
+}
+
+.footer-form {
+  position: relative;
+}
+
+.footer-sending p {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 700;
+  margin: 12px 0px;
+}
+
+.footer-input {
+  width: 358px;
+  height: 50px;
+  background-color: transparent;
+  border: solid 1px;
   border-radius: 5px;
+  border-color: rgba(255, 255, 255, 0.3);
+  margin-right: 6px;
+  padding-left: 15px;
+}
+
+.footer-submit {
   width: 200px;
   height: 50px;
-  background-color: rgb(33, 150, 243);
-  -webkit-box-shadow: 0px 2px 5px #757575;
-          box-shadow: 0px 2px 5px #757575;
-  margin: 32px auto;
-  cursor: pointer;
-  font-family: "Roboto";
-  font-size: 16px;
-  font-weight: 700;
-  color: #FFFFFF;
+  padding: 18px 28px 18px 0px;
+  border: none;
+  border-radius: 5px;
+  border-color: rgba(33, 33, 33, 0.2);
+}
+
+.send-svg {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  fill: #FFFFFF;
 }/*# sourceMappingURL=style.css.map */
