--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -8,7 +8,8 @@
     transition-duration:$duration;
     transition-timing-function:$timing-function;
 }
-@mixin modal-border($border:solid 1px rgba(33, 33, 33, 0.2), $radius:5px){
+@mixin border($border:solid 1px, $color: rgba(33, 33, 33, 0.2), $radius:5px){
     border:$border;
     border-radius:$radius;
+    border-color: $color;
 }
