--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,17 @@ ul {
 }
 
 .container {
-  width: 1200px;
-  margin: 0 auto;
+  width: auto;
   padding: 0 15px;
 }
 
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+  }
+}
 @-webkit-keyframes textAppear {
   0% {
     -webkit-transform: translate(0, 100%);
@@ -39,7 +45,6 @@ ul {
             transform: translate(0, 0%);
   }
 }
-
 @keyframes textAppear {
   0% {
     -webkit-transform: translate(0, 100%);
@@ -76,19 +81,24 @@ ul {
 }
 
 .navigation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-left: 95px;
-  width: 933px;
-}
-.navigation:focus-within {
-  margin-bottom: 0px;
+  display: none;
 }
 
+@media screen and (min-width: 1200px) {
+  .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    margin-left: 95px;
+    width: 933px;
+  }
+  .navigation:focus-within {
+    margin-bottom: 0px;
+  }
+}
 .nav-ul, .header-address {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -208,15 +218,23 @@ ul {
 .modal {
   position: absolute;
   top: 10%;
-  left: 30%;
-  min-width: 528px;
-  min-height: 581px;
+  left: 0%;
+  min-width: 450px;
+  min-height: 609px;
   -webkit-transform: translate(-50% -50%);
           transform: translate(-50% -50%);
   padding-top: 9px;
   background-color: #FFFFFF;
 }
 
+@media screen and (min-width: 1024px) {
+  .modal {
+    top: 10%;
+    left: 30%;
+    min-width: 528px;
+    min-height: 581px;
+  }
+}
 .modal-close-btn {
   width: 30px;
   height: 30px;
@@ -368,29 +386,53 @@ ul {
   font-weight: 400;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(130, 132, 160, 0.4))), url(/img/hero-background.png);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(130, 132, 160, 0.4)), url(/img/hero-background.png);
-  height: 600px;
-  padding-top: 200px;
+  height: 400px;
+  background-position: center;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 600px;
+  }
+}
 .solution {
   font-family: "Roboto";
-  font-size: 44px;
+  font-size: 26px;
   font-weight: 900;
   color: #FFFFFF;
   text-align: center;
 }
 
+@media screen and (min-width: 1024px) {
+  .solution {
+    font-family: "Roboto";
+    font-size: 44px;
+    font-weight: 900;
+  }
+}
 .features {
-  font-family: "Roboto";
-  font-size: 14px;
-  font-weight: 400;
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  gap: 30px;
-  margin-top: 95px;
-  height: 284px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  padding: 55px 0px 0px;
 }
 .features h4 {
   font-family: "Roboto";
@@ -398,20 +440,37 @@ ul {
   font-weight: 700;
   color: #212121;
   margin-bottom: 0px;
+  text-align: center;
 }
 .features p {
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 400;
   color: #757575;
-  line-height: 20px;
+  line-height: 25px;
 }
 
+@media screen and (min-width: 1024px) {
+  .features {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    gap: 30px;
+    padding: 55px 0px;
+  }
+}
 .features_li {
-  width: calc((100% - 60px) / 4);
-  height: 72px;
+  width: 450px;
+  line-height: 10px;
 }
 .features_li::before {
   display: block;
   content: "";
-  width: 270px;
+  width: 450px;
   height: 120px;
   margin-bottom: 30px;
   border-radius: 3px;
@@ -422,6 +481,15 @@ ul {
   background-position: center;
 }
 
+@media screen and (min-width: 1024px) {
+  .features_li {
+    width: calc((100% - 60px) / 4);
+    height: 72px;
+  }
+  .features_li::before {
+    width: 270px;
+  }
+}
 .features_li-antenna::before {
   background-image: url("/img/antenna.svg");
 }
@@ -438,6 +506,15 @@ ul {
   background-image: url("/img/diagram.svg");
 }
 
+.main-h2_adaptive {
+  display: none;
+}
+
+@media screen and (min-width: 1024px) {
+  .main-h2_adaptive {
+    display: block;
+  }
+}
 .main-h2 {
   font-family: "Roboto";
   font-size: 36px;
@@ -447,50 +524,71 @@ ul {
   margin-bottom: 50px;
 }
 
+@media screen and (min-width: 1024px) {
+  .main-h2 {
+    font-family: "Roboto";
+    font-size: 28px;
+    font-weight: 700;
+  }
+}
+.activ-section {
+  margin-top: 95px;
+}
+
 .activities {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
+  display: none;
 }
 
-.activities_li {
-  width: calc((100% - 60px) / 3);
-  position: relative;
-  height: 294px;
+@media screen and (min-width: 1024px) {
+  .activities {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+  }
+  .activities_li {
+    width: calc((100% - 60px) / 3);
+    position: relative;
+    height: 294px;
+  }
+  .activities_li-overlay {
+    position: absolute;
+    bottom: 0;
+    width: 370px;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    padding-top: 27px;
+  }
+  .activities_li-overlay p {
+    font-family: "Roboto";
+    font-size: 14px;
+    font-weight: 700;
+    color: #FFFFFF;
+    text-align: center;
+    margin: 0px;
+  }
 }
-.activities_li-overlay {
-  position: absolute;
-  bottom: 0;
-  width: 370px;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
-  padding-top: 27px;
-}
-.activities_li-overlay p {
-  font-family: "Roboto";
-  font-size: 14px;
-  font-weight: 700;
-  color: #FFFFFF;
-  text-align: center;
-  margin: 0px;
-}
-
 .team {
   background-color: #F5F4FA;
-  margin-top: 90px;
-  padding: 95px 0;
+  padding: 60px 0;
 }
 
-.team-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 30px;
+@media screen and (min-width: 1024px) {
+  .team {
+    padding: 95px 0;
+    margin-top: 90px;
+  }
 }
-
+@media screen and (min-width: 1024px) {
+  .team-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+  }
+}
 .team-members {
-  width: calc((100% - 60px) / 3);
+  margin-bottom: 30px;
   -webkit-box-shadow: 0 2px 2px rgba(117, 117, 117, 0.3);
           box-shadow: 0 2px 2px rgba(117, 117, 117, 0.3);
   line-height: 0px;
@@ -513,9 +611,19 @@ ul {
   margin-bottom: 0px;
 }
 
+@media screen and (min-width: 1024px) {
+  .team-members {
+    width: calc((100% - 90px) / 4);
+  }
+  .team-members img {
+    height: 270px;
+    width: 270px;
+  }
+}
 .team-info {
   background-color: #FFFFFF;
   line-height: 17px;
+  padding-bottom: 23px;
 }
 
 .social-links {
@@ -523,7 +631,8 @@ ul {
   display: -ms-flexbox;
   display: flex;
   gap: 10px;
-  padding: 15px 32px 30px;
+  width: 206px;
+  margin: 15px auto 0px;
   background-color: #FFFFFF;
 }
 .social-links li {
@@ -544,6 +653,11 @@ ul {
   fill: #FFFFFF;
 }
 
+@media screen and (min-width: 1024px) {
+  .social-links {
+    padding: 15px 32px 30px;
+  }
+}
 .social-links_el {
   display: block;
   width: 20px;
@@ -574,12 +688,23 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 30px;
   margin-top: 60px;
 }
 
+@media screen and (min-width: 1024px) {
+  .customers_ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 30px;
+    margin-top: 60px;
+  }
+}
 .customers_li {
-  width: 170px;
+  width: calc((100% - 30px) / 2);
   height: 92px;
   border: solid 1px;
   border-radius: 5px;
@@ -601,6 +726,11 @@ ul {
   fill: rgb(33, 150, 243);
 }
 
+@media screen and (min-width: 1024px) {
+  .customers_li {
+    width: 170px;
+  }
+}
 .customers-icons {
   display: block;
   margin: 20px auto;
@@ -617,14 +747,27 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   gap: 8px;
-  margin-top: 105px;
-  margin-bottom: 50px;
+  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
+@media screen and (max-width: 768px) {
+  .topic {
+    width: 326px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .topic {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 105px;
+    margin-bottom: 50px;
+  }
+}
 .topic-el {
   font-family: "Roboto";
   font-size: 14px;
@@ -656,17 +799,28 @@ ul {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 30px;
-  margin-bottom: 85px;
+  margin-bottom: 60px;
 }
 
+@media screen and (min-width: 1024px) {
+  .projects {
+    margin-bottom: 85px;
+  }
+}
 .project-el {
   position: relative;
-  width: calc((100% - 60px) / 3);
+  width: 450px;
   height: 404px;
   margin-bottom: 30px;
   line-height: 0px;
   overflow: hidden;
+}
+.project-el img {
+  width: 450px;
 }
 .project-el:hover {
   -webkit-box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.3);
@@ -683,6 +837,11 @@ ul {
           animation-direction: alternate;
 }
 
+@media screen and (min-width: 1024px) {
+  .project-el {
+    width: calc((100% - 60px) / 3);
+  }
+}
 .hover-text {
   display: none;
   position: absolute;
@@ -729,12 +888,6 @@ footer {
   color: #FFFFFF;
   padding: 60px 0;
 }
-footer .container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  gap: 85px;
-}
 footer .address_el, footer .logo {
   color: #FFFFFF;
 }
@@ -742,17 +895,38 @@ footer .address_el:hover {
   color: rgb(33, 150, 243);
 }
 
+@media screen and (min-width: 1200px) {
+  footer .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    gap: 85px;
+  }
+}
+.footer-address {
+  width: 232px;
+  margin: 0 auto;
+}
+.footer-address .logo {
+  margin: 0px 30px;
+}
+
 .address {
   margin-top: 24px;
   line-height: 30px;
 }
 
-.footer-linksp {
+.footer-address_el {
+  margin: 0px 40px;
+}
+
+.footer-links p {
   font-family: "Roboto";
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 2px;
-  margin: 12px 0px 20px;
+  text-align: center;
+  margin: 60px 0px 20px;
 }
 .footer-links .social-links {
   background-color: #2F303A;
@@ -768,19 +942,16 @@ footer .address_el:hover {
   fill: #FFFFFF;
 }
 
-.footer-form {
-  position: relative;
-}
-
 .footer-sending p {
   font-family: "Roboto";
   font-size: 14px;
   font-weight: 700;
-  margin: 12px 0px;
+  margin: 60px 0px 20px;
+  text-align: center;
 }
 
 .footer-input {
-  width: 358px;
+  width: 450px;
   height: 50px;
   background-color: transparent;
   border: solid 1px;
@@ -791,9 +962,12 @@ footer .address_el:hover {
 }
 
 .footer-submit {
+  position: relative;
+  display: block;
   width: 200px;
   height: 50px;
   padding: 18px 28px 18px 0px;
+  margin: 20px auto;
   border: none;
   border-radius: 5px;
   border-color: rgba(33, 33, 33, 0.2);
