--- a/sass/components/_common.scss
+++ b/sass/components/_common.scss
@@ -7,7 +7,13 @@ ul{
     padding-inline-start: 0;
 }
 .container{
-    width: 1200px;
-    margin: 0 auto;
+    width: auto;
     padding: 0 15px;
+}
+@media screen and (min-width:1200px){
+    .container{
+        width: 1200px;
+        margin: 0 auto;
+        padding: 0 15px;
+    }
 }
