--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -3,10 +3,6 @@ footer{
     color:$white;
     padding: 60px 0;
 
-& .container{
-    display: flex;
-    gap: 85px;
-}
 & .address_el, & .logo{
     color: $white;
 }
@@ -14,15 +10,41 @@ footer{
     color:$hover;
 }
 }
+@media screen and (min-width:1200px) {
+    footer{
+        & .container{
+            display: flex;
+            gap: 85px;
+}
+}
+}
+.footer-address{
+    width: 232px;
+    margin: 0 auto;
+& .logo{
+    margin: 0px 30px;
+}
+// & .address{
+//     display: flex;
+//     width: 232px;
+//     flex-direction: column;
+//     justify-content: center;
+// }
+}
 .address{ 
      margin-top: 24px;
      line-height: 30px;
 }
+.footer-address_el{
+    margin: 0px 40px;
+}
 .footer-links {
-&p{
+& p{
     @include fonts($font-weight:700);
     letter-spacing: 2px;
-    margin: 12px 0px 20px;
+    text-align: center;
+    margin: 60px 0px 20px;
+
 }
 & .social-links{
     background-color:$first-color;
@@ -38,17 +60,18 @@ footer{
     fill:$white;
 }
 }
-.footer-form{
-    position: relative;
-}
+// .footer-form{
+//     position: relative;
+// }
 .footer-sending { 
 & p{
     @include fonts($font-weight:700);
-    margin: 12px 0px;
+    margin: 60px 0px 20px;
+    text-align: center;
 }
 }
 .footer-input{
-    width: 358px;
+    width:450px;
     height: 50px;
     background-color: transparent;
     @include border($color: rgba(255, 255, 255, 0.3));
@@ -56,9 +79,12 @@ footer{
     padding-left: 15px;
 }
 .footer-submit{
+    position: relative;
+    display: block;
     width: 200px;
     height: 50px;
     padding: 18px 28px 18px 0px;
+    margin: 20px auto;
     @include border($border:none);
 
     @extend %buttons;
