--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -9,12 +9,16 @@
     font-size: 26px;
     color: $black;
     text-decoration: none;
-    margin: 30px 0
+    margin: 30px 0;
 }
 .logo-decor-text{
     color: $hover;
 }
 .navigation {
+    display: none;
+}
+@media screen and (min-width:1200px) {
+    .navigation{
     display: flex;  
     justify-content:space-between;
     margin-left: 95px;
@@ -23,10 +27,11 @@
         margin-bottom: 0px;
     }
 }
-.nav-ul{
-    display: flex;
-    gap: 50px;
 }
+.nav-ul{
+        display: flex;
+        gap: 50px;
+    }
 .nav-ul_el{
     @include fonts($font-weight:500);
     @include transition();
