--- a/sass/components/index/_main.scss
+++ b/sass/components/index/_main.scss
@@ -5,40 +5,67 @@
         rgba(47,48,58,0.4),
         rgba(130,132,160,0.4)),
     url(/img/hero-background.png);
-    height: 600px;
-    padding-top: 200px;
+    height: 400px;
+    background-position: center;
     background-size: cover;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+@media screen and (min-width:1200px) {
+    .hero{
+        height: 600px; 
+        // padding-top: 200px;
+    }
 }
 .solution{
-    @include fonts($font-size:44px, $font-weight:900);
+    @include fonts($font-size:26px, $font-weight:900);
     color: $white;  
     text-align: center; 
 }
+@media screen and (min-width:1024px) {
+    .solution{
+     @include fonts($font-size:44px, $font-weight:900);   
+    }
+}
 .features{
-    @include fonts();
     display: inline-flex;
-    gap: 30px;
-    margin-top: 95px;
-    height: 284px;
+    flex-direction: column;
+    padding: 55px 0px 0px;
+    // margin: 60px 0;
+    // height: 284px;
 & h4{
     @include fonts($font-weight:700);
     color:$dark-text;
     margin-bottom: 0px;
+    text-align: center;
 }
 & p{
+    @include fonts();
     color:$grey-text;
-    line-height: 20px;
+    line-height: 25px;
 }
+}
+@media screen and (min-width:1024px){
+    .features{
+        display: inline-flex;
+        flex-direction: row;
+        gap: 30px;
+        padding: 55px 0px;
+    }
 }
 .features_li{
-    width: calc((100% - 60px) /4);
-    height: 72px;
+    width: 450px;
+    line-height: 10px;
 &::before{
     display: block;
     content: "";
-    width: 270px;
+    width:450px;
     height: 120px;
     margin-bottom: 30px;
+    
     border-radius: 3px;
     background-size: contain;
     background-color:$soft-background;
@@ -46,11 +73,28 @@
     background-size: 70px 70px;
     background-position: center;
 }
-}    
+} 
+@media screen and (min-width:1024px){
+    .features_li{
+        width: calc((100% - 60px) /4);
+        height: 72px;
+&::before{
+    width: 270px;
+}
+    }
+}   
 $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
     @each $icons-items in $icons{
     .features_li-#{$icons-items}::before{
         background-image: url("/img/#{$icons-items}.svg");
+    }
+}
+.main-h2_adaptive{
+    display: none;
+}
+@media screen and (min-width:1024px){
+    .main-h2_adaptive{
+        display: block;
     }
 }
 .main-h2{
@@ -59,6 +103,18 @@ $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
     text-align: center;
     margin-bottom: 50px;
 }
+@media screen and (min-width:1024px) {
+    .main-h2{
+        @include fonts($font-size:28px, $font-weight:700);
+    }
+}
+.activ-section{
+    margin-top: 95px;
+}
+.activities{
+    display: none;
+}
+@media screen and (min-width:1024px) {
 .activities{
     display:flex;
     gap: 30px;
@@ -81,18 +137,26 @@ $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
     margin: 0px;
 }
 }
+}   
 }
 .team{
     background-color:$soft-background;
-    margin-top: 90px;
-    padding: 95px 0;
+    padding: 60px 0;
 }
-.team-container{
-    display: flex;
-    gap: 30px;
+@media screen and (min-width:1024px) {
+    .team{
+        padding: 95px 0;
+        margin-top: 90px;
+    }  
+}
+@media screen and (min-width:1024px) {
+    .team-container{
+        display: flex;
+        gap: 30px;
+    }
 }
 .team-members{
-    width: calc((100% - 60px) /3);
+    margin-bottom: 30px;
     box-shadow: 0 2px 2px rgba(117, 117, 117, 0.3) ;
     line-height: 0px; 
     border-radius: 5px;
@@ -109,14 +173,25 @@ $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
     margin-bottom: 0px;
 }
 }
+@media screen and (min-width:1024px) {
+    .team-members{
+        width: calc((100% - 90px) /4);
+& img{
+        height: 270px;
+        width: 270px;
+       }
+    }
+}
 .team-info{
     background-color:$white;
     line-height: 17px;
+    padding-bottom: 23px;
 }
 .social-links{
     display: flex;
     gap: 10px;
-    padding: 15px 32px 30px;
+    width: 206px;
+    margin: 15px auto 0px;
     background-color:$white;
 & li{
     height: 44px;
@@ -130,6 +205,11 @@ $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
 }
 }
 }
+}
+@media screen and (min-width:1024px) {
+    .social-links{
+        padding: 15px 32px 30px;
+    }
 }
 .social-links_el{
     display: block;
@@ -150,11 +230,19 @@ $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
 }
 .customers_ul{
     display: flex;
+    flex-wrap: wrap;
     gap: 30px;
     margin-top: 60px;
 }
+@media screen and (min-width:1024px) {
+    .customers_ul{
+        display: flex;
+        gap: 30px;
+        margin-top: 60px;
+    }
+}
 .customers_li{
-    width: 170px;
+    width:calc((100% - 30px)/2);
     height: 92px;
     @include border($color:$svg-color);
 
@@ -166,6 +254,11 @@ $icons: 'antenna', 'astronaut' ,'clock', 'diagram';
         fill:$hover;
     }
 }
+}
+@media screen and (min-width:1024px) {
+    .customers_li{
+        width: 170px;
+    }
 }
 .customers-icons{
     display: block;
